--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "twentyone-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
-    "start": "npm run migrate && node app.js",
-    "migrate": "knex migrate:latest"
+    "start": "npm run build && npm run migrate  && node ./dist/app.js",
+    "build": "npm run clean && tsc",
+    "clean": "rm -rf ./dist",
+    "migrate": "knex migrate:latest --knexfile ./dist/knexfile.js"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +21,10 @@
     "socket.io": "^3.0.4",
     "sqlite3": "^5.0.1",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.11",
+    "typescript": "^4.1.3"
   }
 }
