--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.ts",
   "scripts": {
     "start": "npm run build && npm run migrate  && node ./dist/app.js",
-    "build": "npm run clean && tsc",
-    "clean": "rm -rf ./dist",
+    "build": "rm -rf ./dist && tsc",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "migrate": "knex migrate:latest --knexfile ./dist/knexfile.js"
   },
   "keywords": [],
@@ -25,6 +25,12 @@
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.11",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
 }
