--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "app.ts",
   "scripts": {
-    "start": "node ./dist/app.js",
+    "start": "npm run migrate && node ./dist/app.js",
     "build": "tsc",
     "postinstall": "npm run build && rm -v -rf src",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "migrate": "tsc && knex migrate:latest --knexfile ./dist/knexfile.js"
+    "migrate": "knex migrate:latest --knexfile ./dist/knexfile.js"
   },
   "engines": {
     "node": "14.x"
@@ -20,8 +20,8 @@
     "express": "^4.17.1",
     "knex": "^0.21.15",
     "objection": "^2.2.6",
+    "pg": "^8.5.1",
     "socket.io": "^3.0.4",
-    "sqlite3": "^5.0.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -33,6 +33,7 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1",
+    "sqlite3": "^5.0.1",
     "typescript": "^4.1.3"
   }
 }
