chore: clear up database initialization

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.ts",
   "scripts": {
-    "start": "npm run migrate && node ./dist/app.js",
+    "start": "node ./dist/app.js",
     "build": "tsc",
     "postinstall": "npm run build && rm -v -rf src",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
